--- a/src/app/components/home/bed-info/bed-info.component.html
+++ b/src/app/components/home/bed-info/bed-info.component.html
@@ -10,7 +10,7 @@
           <span>{{
             selectedHospital.hospitalAddress.streetAddress +
               ", " +
-              selectedHospital.hospitalAddress.city +
+              selectedHospital.hospitalAddress.cityName +
               "-" +
               selectedHospital.pincode +
               ", " +
