--- a/src/app/components/home/history/history.component.css
+++ b/src/app/components/home/history/history.component.css
@@ -16,3 +16,16 @@
   display: block;
   padding-bottom: 5px;
 }
+
+.view-bill-btn {
+  border-radius: 5px;
+  border: 2px solid rgb(71, 158, 77);
+  color: rgb(71, 158, 77);
+}
+
+.view-bill-btn:hover {
+  background-color: rgb(71, 158, 77);
+  color: white;
+  box-shadow: 0 5px 20px 5px rgba(0,0,0,0.3);
+  transition: 0.1s ease-in;
+}
