--- a/src/app/components/home/navbar/navbar.component.html
+++ b/src/app/components/home/navbar/navbar.component.html
@@ -6,7 +6,8 @@
   <div class="navbar-right">
     <span id="welcome-text">Welcome, {{ userName }}!</span>
     <span>
-      <button class="profile-icon" data-bs-toggle="modal" data-bs-target="#editModal" (click)="updateProfile()"><i class="fas fa-user"></i></button>
+      <button class="profile-icon" data-toggle="tooltip" data-placement="top" title="View Profile" data-bs-toggle="modal" data-bs-target="#editModal" ><i class="fas fa-user"></i></button>
+      <!-- (click)="updateProfile()" -->
     </span>
     <span class="logout" (click)="logout()">Logout</span>
   </div>
@@ -56,7 +57,8 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="clickUpdateProfile()">Apply</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="clickUpdateProfile()">Apply</button> 
+        <!--  -->
       </div>
     </div>
   </div>
